--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -55,6 +55,22 @@
    @apply mx-auto max-w-7xl px-6 lg:px-8;
 }
 
+.flash {
+   @apply border px-2 py-3 rounded;
+}
+
+.flash-success {
+   @apply bg-green-100 text-green-500 border-green-300;
+}
+
+.flash-warning {
+   @apply bg-yellow-100 text-yellow-500 border-yellow-300;
+}
+
+.flash-danger {
+   @apply bg-red-100 text-red-500 border-red-300;
+}
+
 .radio-btn {
     @apply cursor-pointer select-none border border-gray-300 text-center text-gray-500 rounded py-2;
 }
