--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,7 +56,8 @@
 }
 
 .container {
-   @apply mx-auto max-w-7xl px-6 lg:px-8;
+   @apply mx-auto px-6 lg:px-8;
+   max-width: 90rem;
 }
 
 .flash {
